# MBCoreUtils

./: .gitignore  .gitmodules  CMakeLists.txt  MBCoreUtilsConfig.cmake.in  README.md  SConscript  SConstruct  birdwing_code_gen.py  build_metadata.py  build_stuff.py  conanfile.py  hook_settings.py  jackson_mustache_codegen.py  pystache_utils.py
.github/workflows/: printer-errors.yml
birdwing/: README.md  SConscript  enum_parse.py  machine_errors.json  parse_enums.py  toolhead_errors.json
birdwing_codegen/: README.md  transformations.json
birdwing_codegen/contexts/: README.md  common_settings.json  errors.json  errors.py  errors_README.md  homing_type_enum.json  kaiten_api.py  machine.json  machine_specific_enums.json  machine_specific_enums.py  machine_specific_toolhead_metadata.py  machine_specific_toolhead_structs.py  processes.py  tool_metadata.json  toolheads.json
birdwing_codegen/static/: machine_config_skeleton.json
birdwing_codegen/templates/: README.md
birdwing_codegen/templates/cpp/: bot_error.hh  toolhead_initialization.cc
birdwing_codegen/templates/fwclient_cpp/: kaiten_api.hh
birdwing_codegen/templates/machine_cpp/: extruder_common.hh  homing_type.hh  machine_definitions.hh  machine_errors.hh  machine_structs.hh  toolhead_errors.hh  toolhead_initialization.cc  toolhead_toolidentifier.hh
birdwing_codegen/templates/python/: common_settings.py  homing_types.py  machine_definitions.py  machine_errors.py  machine_structs.py  tool_mappings.py  toolhead_errors.py
birdwing_codegen/templates/shared_cpp/: all_errors.hh  all_errors_node.hh  bot_error.hh  bot_error_noboost.hh  bot_error_noqt.hh  bot_error_translateable.hh  common_settings.hh  ikrpccontroller.hh  kaitenstub.hh  process_enums.hh  tool_mappings.hh  toolheads.hh
cpp/include/: appparameters.hh  ilifecyclecontrol.hh  thread.hh
cpp/include/mbcoreutils/: appparameters.h  commontypes.h  conditionvariable.h  event.h  irunnable.h  json.h  json_impl.h  linuxapplication.h  lockguard.h  macapplication.h  mutex.h  tagged_id.h  thread.h  usb_descriptor.h  version.h  windows_main.h
cpp/src/include/: commontypes.hh  linuxapplication.hh
debian/: changelog  control  libmbcoreutils-dev.install
docs/: codegen_readme.md
include/bwcoreutils/: README.md  bot_error.hh
include/mbcoreutils/: CMakeLists.txt  JCpp.h  angle.h  conditionvariable.h  firmware_logging.h  ilifecyclecontrol.h  ilock.h  json.h  json_impl.h  jsoncpp_wrappers.h  kilograms.h  linuxapplication.h  materials.h  meters.h  mutex.h  tagged_id.h  toolpath_tags.h  usb_descriptor.h  vector_version.h  version.h  weight.h
libmbeigen/: CMakeLists.txt
libmbeigen/src/: Makefile  cmake_install.cmake
libmbeigen/src/Cholesky/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/CholmodSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/arch/: Makefile  cmake_install.cmake
libmbeigen/src/Core/arch/AltiVec/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/arch/Default/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/arch/NEON/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/arch/SSE/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/products/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Core/util/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Eigen2Support/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Eigen2Support/Geometry/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Eigenvalues/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Geometry/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Geometry/arch/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Householder/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/IterativeLinearSolvers/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/Jacobi/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/LU/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/LU/arch/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/OrderingMethods/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/PaStiXSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/PardisoSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/QR/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/SVD/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/SparseCholesky/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/SparseCore/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/StlSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/SuperLUSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/UmfPackSupport/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/misc/: CMakeLists.txt  Makefile  cmake_install.cmake
libmbeigen/src/plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
rpm/: MBCoreUtils.spec
site_scons/: birdwing_code_gen.py  machine_specific_settings_gen.py  mustache_based_codegen.py  mustache_codegen.py
src/cpp/: event.hh  irunnable.hh
translations/: errors_de.ts  errors_es.ts  errors_es_la.ts  errors_fr.ts  errors_it.ts  errors_ja.ts  errors_ko.ts  errors_kr.ts  errors_pr.ts  errors_zh.ts
